# cadrum

./: .gitignore  01_primitives.step  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  build.rs  build_delegation.rs  makefile  仕様書.md
.claude/: settings.local.json
clang-wasm/: Cargo.toml
clang-wasm/bridge/: wasi_bridge.c
clang-wasm/src/: lib.rs  main.rs
cpp/: ffi.h  wrapper.cpp  wrapper.h
docker/: Dockerfile_aarch64-unknown-linux-gnu  Dockerfile_emscripten-clang  Dockerfile_wasm32-unknown-unknown  Dockerfile_x86_64-pc-windows-gnu  Dockerfile_x86_64-unknown-linux-gnu
docs/: 20260303-ffi-exception-safety_jp.md  20260303-stretch-generated-faces_jp.md  20260304-color_feature実装計画.md  20260304-旧色対応builder.rs.md  20260328-wasm-cmake-rust_jp.md  20260329-wasmビルド方針_jp.md
examples/: .gitignore  00_chijin.rs  01_primitives.rs  02_transform.rs  02_write_read.rs  03_boolean.rs  03_transform.rs  04_boolean.rs  05_chijin.rs  05_extrude.rs  06_loft.rs  07_sweep.rs  08_bspline.rs  08_gordon_surface.rs  08_shell.rs  09_bspline.rs  09_gordon_probe.rs  101_joint.rs  10_fillet.rs  11_chamfer.rs  12_multiview.rs  13_sketch.rs  book.rs  box.rs  chijin.rs  codegen.rs  markdown.rs  stretch.rs  stretch_colored.rs
figure/: .gitignore
notes/: 20260330-Qiita記事.md  20260407-4方針整理核融合WASMPURE.md  20260413-GordonBuilderの周期制約.md  20260427-generated_delegation.rs  20260524-fit_segments手法解説.md  20260525-SDFをCADに使う設計考察.md  20260527-boolean演算の刷新.md  20260529-競合分析とcadrum弱み分析_jp.md  20260603-history定義の明確化.md  20260612-OCCTをwasmに載せてrun-cadrumを通す.md  20260617-wasm-clangスパイクwrapperコンパイルのメモリ実測.md  20260617-wasm-clang実走スパイクGATE1ブロック.md  20260617-wrapper_aのwasmビルドサイズ実測.md  20260618-GATE-C2突破-純WASI-clangで有効object生成.md  20260618-approach2-純WASI-clang-wasmの全記録.md  20260618-clang-wasm-emscripten実ビルド成功と残課題-object出力.md  (+12 more)
sandbox-wasm/: Cargo.toml  README.md  build.rs  makefile
sandbox-wasm/src/: cpp.cpp  ffi.c  lib.rs  wasi_stub.c
(+82 files in other folders)
