[package]
name = "wasm-experiment"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"
cadrum = { path = "..", optional = true }
cxx = { version = "1", optional = true }

[build-dependencies]
cc = "1"
cxx-build = "1"

[features]
pure = []
cc = []
cxx = ["dep:cxx"]
cadrum = ["dep:cadrum"]
libcxx = [] # build with libcxx